# upkit

./: .gitignore  .stats.yml  .travis.yml  CONTRIBUTING.md  Makefile.am  Makefile.riot  README.md  Vagrantfile  antani.c  autogen.sh  config.h.in  configure.ac  default_keys.h  libpull_config.h.in  project.yml
agents/: Makefile  bootloader.c  bootloader_agent.c  update.c
include/agents/: coroutine.h  update.h
include/common/: async.h  callback.h  error.h  external.h  identity.h  libpull.h  loader.h  logger.h  settings.h  types.h
include/libpull/: common.h  memory.h  network.h  pipeline.h  security.h
include/libpull/common/: callback.h  crc16.h  error.h  external.h  identity.h  libpull_config.h  loader.h  logger.h  pull_assert.h  types.h
include/libpull/fsm/: libpull_fsm.h
include/libpull/memory/: flash_interface.h  manifest.h  memory.h  memory_interface.h  memory_objects.h  simple_manifest.h
include/libpull/network/: async.h  async_interface.h  connection.h  connection_config.h  connection_interface.h  fsm.h  gatt.h  receiver.h  request.h  subscriber.h  transport_config.h  writer.h
include/libpull/pipeline/: bspatch.h  buffer.h  decript.h  lzss.h  pipeline.h  writer.h
include/libpull/security/: aes.h  digest.h  ecc.h  rng.h  safestore.h  sha256.h  verifier.h
include/libpull_agents/: README.md  bootloader.h  bootloader_agent.h  bootloader_ctx.h  coroutines.h  update.h
include/libpull_network/coap/: async_libcoap.h  connection_ercoap.h  connection_libcoap.h  connection_libcoap_riot.h  connection_zoap.h
include/memory/: manifest.h  memory.h  memory_objects.h  metadata.h  simple_manifest.h
include/network/: receiver.h  subscriber.h  transport.h  transport_config.h
include/security/: digest.h  ecc.h  sha256.h  verifier.h
patches/cryptoauthlib/: 0003-Use-Contiki-memory-allocation.patch
patches/libcoap/: 0001-add-ecdh-support-for-tinydtls.patch
patches/tinydtls/: 0001_contiki_ng_Add-watchdog-for-ECC-verification.patch  0002_contiki_ng_Disable-TinyDTLS-debug-for-Contiki.patch
src/: Makefile
src/agents/: bootloader_agent.c  update.c  update.h
src/common/: error.c  identity.c
src/core/common/: crc16.c  error.c  identity.c
src/core/fsm/: libpull_fsm.c
src/core/memory/: manifest.c  memory_flash.c  memory_impl.c  memory_objects.c  simple_manifest.c
src/core/network/: connection_config.c  fsm.c  receiver.c  request.c  subscriber.c  writer.c
src/core/pipeline/: bspatch.c  buffer.c  lzss.c  writer.c
src/core/security/: cryptoauthlib.c  cryptoauthlib.h  mbedtls.c  safestore.c  tinycrypt.c  tinycrypt.h  tinydtls.c  tinydtls.h  verifier.c
src/cpu/: arm_cortex_loader.c
src/cpu/arm/: arm_cortex_loader.c
src/fsm/: libpull_fsm.c
src/memory/: manifest.c  memory.c  memory_flash.c  memory_objects.c  metadata.c  simple_manifest.c  simple_manifest_impl.c  simple_manifest_impl.h  simple_metadata.c  simple_metadata.h
src/network/: connection_config.c  receiver.c  subscriber.c  transport_config.c  transport_config.h  writer.c  writer_buffered.c
src/network/ble/: zephyr_ble.c
src/network/coap/er-coap/: connection_ercoap.c  connection_ercoap.h
src/network/coap/libcoap/: async_libcoap.c  connection_libcoap.c  connection_libcoap.h
src/network/coap/libcoap_riot/: async_libcoap.c  connection_libcoap.c  connection_libcoap.h
src/network/coap/zoap/: async_zoap.c  connection_zoap.c  connection_zoap.h
src/platform/cc2538/: memory_firefly.c  platform_headers.h  rng.c  rom.h  utils.h
src/platform/cc2650/: memory_cc2650.c  platform_headers.h  rng_cc2560.c  utils.h
src/platform/nrf52840/: memory_nrf52840_pca10056.c  platform_headers.h  rng.c  utils.h
src/platform/posix/: memory_posix.c  memory_posix.h  rng.c
src/security/: cryptoauthlib.c  cryptoauthlib.h  tinycrypt.c  tinycrypt.h  tinydtls.c  tinydtls.h  verifier.c
test/: .gitignore  Makefile.am  push-size.sh  script.sh  test-ci.sh  test_connection_dtls  test_crc16  test_update
test/agents/: test_bootloader_agent.c  test_update.c  test_update_pull.c  test_update_push.c
test/common/: test_crc16.c
test/integration/: test_logic.c
test/memory/: test_manifest.c  test_memory.c  test_memory_objects.c
test/mocks/: manifest_mock.c  manifest_mock.h  memory_mock.c  memory_mock.h
test/network/: test_connection_dtls.c  test_receiver.c  test_receiver_memory_invalid.c  test_request.c  test_subscriber.c  test_transport_dtls.c
test/pipeline/: test_bspatch.c  test_buffer.c  test_lzss.c  test_pipeline.c
test/platform/: README.md  memory.h  network.h  ntest.h  security.h  shared.h  stest.h
test/security/: test_tinycrypt.c  test_tinydtls.c  test_verifier.h
test/support/: async_libcoap.c  async_libcoap.h  external_variables.c  invalid_digest.h  memory_file_posix.c  memory_file_posix.h  platform_headers.h  sample_data.h  support.h  test_runner.h  testing_settings.h  tinycrypt_default_cspring.c  tinycrypt_default_cspring.h  transport_libcoap.c  transport_libcoap.h  utils.c  utils.h
utils/: Makefile  assets_generator.sh
utils/firmware_tool/: .gitignore  Makefile  Makefile.am  config.json  config.toml  context.cpp  context.hpp  firmware_tool.cpp  firmware_tools.c  prov_key.priv  prov_key.pub  vend_key.priv  vend_key.pub
utils/firmware_tool/commands/: bootctx.cpp  commands.hpp  configs.cpp  help.cpp  keys.cpp  manifest.cpp  pipeline.cpp  utils.cpp
utils/hooks/: README.md  commit-msg
utils/server/: .gitignore  Makefile  Makefile.am  README.md  config.h  network.c  server.c  server.h
utils/server/resources/: echo.c  firmware.c  firmware_diff.c  firmware_invalid_signature.c  firmware_invalid_size.c  next_version.c  resources.h  version.c  version_invalid.c
